# Tredio

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  export_requirements.sh  manage.py  package-lock.json  pyproject.toml  requirements.txt  reset_migrations.sh
.github/workflows/: main_myculture.yml
YlPlusProject/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  forms.py  models.py  validators.py
core/migrations/: 0001_initial.py  0002_alter_contact_contacts_group_id.py  0003_city_location.py  0004_rename_contacts_group_id_contact_contacts_group.py
group/: admin.py  apps.py  forms.py  models.py  querysets.py  urls.py  views.py
group/migrations/: 0001_initial.py  0002_alter_meetupparticipant_meetup.py  0003_alter_meetup_event.py  0004_alter_meetup_host.py
homepage/: apps.py  urls.py
rating/: admin.py  forms.py  models.py  querysets.py  urls.py  views.py
rating/migrations/: 0001_initial.py  0002_alter_review_review_group_id.py  0003_alter_review_user.py
static_dev/css/: Open Sans.css  Roboto Slab.css  Roboto.css  form.css  styles.css
static_dev/js/: multi-step-form.js  script.js
templates/: base.html
templates/group/: group_create.html  group_detail.html  group_list.html
templates/homepage/: home.html
templates/includes/: actor_block.html  actors_block.html  description_block.html  footer.html  form-errors.html  form-login.html  header.html  (+1 more)
theatres/: admin.py  apps.py  forms.py  models.py  querysets.py  urls.py  views.py
users/: admin.py  apps.py  context.py  forms.py  models.py  querysets.py  urls.py  views.py
(+42 files in other folders)
