[tool.poetry]
name = "ylplusproject"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.4"
django-debug-toolbar = "^3.3.0"
python-dotenv = "^0.20.0"
sorl-thumbnail = "^12.8.0"
django-cleanup = "^6.0.0"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.18.1"

[tool.isort]
py_version = 38
profile = "black"

[tool.black]
target-version = ['py38']
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
